# Ai-File-Brain

./: .gitignore  README.md  SETUP-ARC-GPU.md  pyinstaller.spec  pyproject.toml  settings.toml
docs/superpowers/plans/: 2026-05-13-single-exe-packaging.md
docs/superpowers/specs/: 2026-04-28-ai-file-brain-python-design.md  2026-05-05-ocr-image-extraction-design.md  2026-05-05-post-ocr-roadmap.md  2026-05-13-single-exe-packaging-design.md
scripts/: gen_sample_files.py
src/ai_file_brain/: __main__.py  config.py
src/ai_file_brain/app/: di.py  main.py
src/ai_file_brain/app/models/: chat_turn.py
src/ai_file_brain/app/services/: health_check_service.py  indexing_activity_service.py  tray_icon_service.py  watch_folder_service.py
src/ai_file_brain/app/view_models/: main_window_vm.py  status_bar_vm.py
src/ai_file_brain/app/views/: main_window.py
src/ai_file_brain/core/: chat.py  chunking.py  embedding.py  exclusions.py  metadata_index.py  models.py  storage.py  time_intent.py  watcher.py
src/ai_file_brain/core/extraction/: __init__.py  doc.py  docx.py  image.py  ocr.py  pdf.py  plain_text.py  ppt.py  pptx.py  (+2 more)
tests/: conftest.py
tests/app/: test_health_check_service.py  test_indexing_activity_service.py  test_main_window_banner.py  test_main_window_vm.py  test_status_bar_vm.py  test_watch_folder_service.py
tests/core/: test_chat_service.py  test_chunking.py  test_config.py  test_embedding.py  test_exclusions.py  test_extraction.py  test_indexing_pipeline.py  test_metadata_index.py  test_models.py  test_storage_metadata.py  test_time_intent.py  test_watcher_scan.py
