[project]
name = "ai-file-brain"
version = "0.1.0"
description = "Local-first RAG over your files: Ollama + ChromaDB + PySide6 tray app"
requires-python = ">=3.12,<3.13"
dependencies = [
    "PySide6>=6.7",
    "qasync>=0.27",
    "ollama>=0.4",
    "chromadb>=0.5",
    "pypdf>=5.0",
    "watchdog>=5.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "aiofiles>=24.1",
    "rapidocr-onnxruntime>=1.4",
    "pymupdf>=1.24",
    "pillow>=10.4",
    "numpy>=1.26",
    "python-docx>=1.1",
    "python-pptx>=0.6",
    "openpyxl>=3.1",
    "xlrd>=2.0.1",
    "olefile>=0.46",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-qt>=4.4",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "xlwt>=1.3",
]
build = [
    "pyinstaller>=6.10",
]

[project.scripts]
ai-file-brain = "ai_file_brain.app.main:main"

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_file_brain"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q"
filterwarnings = [
    "ignore::DeprecationWarning",
]
markers = [
    "slow: marks tests as slow (e.g., OCR-touching). Deselect with -m 'not slow'.",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W", "SIM", "RUF"]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.format]
quote-style = "double"
